<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.artworkspace.storyapp.ui.home.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_location"
        android:name="com.artworkspace.storyapp.ui.home.ui.location.LocationFragment"
        android:label="@string/location"
        tools:layout="@layout/fragment_locations" />

    <fragment
        android:id="@+id/navigation_setting"
        android:name="com.artworkspace.storyapp.ui.home.ui.setting.SettingFragment"
        android:label="@string/setting"
        tools:layout="@layout/fragment_settings" />
</navigation>