<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clipToPadding="false"
    android:paddingHorizontal="16dp"
    android:paddingVertical="8dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="4dp"
        app:cardElevation="0dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:paddingBottom="16dp">

            <TextView
                android:id="@+id/tv_story_username"
                style="@style/Text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/dummy_name" />

            <ImageView
                android:id="@+id/iv_story_image"
                android:layout_width="match_parent"
                android:layout_height="280dp"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/story_s_illustration"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_story_date"
                tools:src="@drawable/image_learning" />

            <TextView
                android:id="@+id/tv_story_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_story_image"
                tools:text="@string/dummy_description" />

            <TextView
                android:id="@+id/tv_story_date"
                style="@style/Text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:alpha="0.6"
                android:textAllCaps="true"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/tv_story_username"
                app:layout_constraintStart_toStartOf="@+id/tv_story_username"
                app:layout_constraintTop_toBottomOf="@+id/tv_story_username"
                tools:text="@string/dummy_date" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</FrameLayout>